# othello

./: Cargo.toml
resource/: index.html  main.js  style.css
src/: board.rs  main.rs
