[package]
name = "othello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "1", features = ["full"] }
warp = "*"
env_logger = "=0.8.2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"